# tea-shop-service

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  docker-compose.yml
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: cart.proto  order.proto
abi/src/pb/: cart.rs  mod.rs  order.rs
authority/: Cargo.toml
migrations/: 20230210014504_init.down.sql  20230210014504_init.up.sql  20230210022421_order.down.sql  20230210022421_order.up.sql  20230210065423_product.down.sql  20230210065423_product.up.sql
service/: Cargo.toml
service/fixtures/: config.yml
service/src/: lib.rs
