[workspace]
members = [
    "service",
    "abi",
    "order",
    "authority",
]

[workspace.dependencies]
tonic = { version = "0.8.3", features = ["tokio-rustls", "gzip"] }
prost = "0.11.6"
prost-types = "0.11.6"
anyhow = "1.0.69"
tracing = "0.1.37"
tokio = { version = "1.25.0", features = ["full"] }