[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
order = { version = "0.1.0", path = "../order" }
authority = { version = "0.1.0", path = "../authority" }
serde = { version = "1.0.152", features = ["derive"] }
tracing = "0.1.37"
tokio = { version = "1.25.0", features = ["full"] }
tonic = { version = "0.8.3", features = ["tokio-rustls", "gzip"] }
anyhow = "1.0.69"
futures = { version = "0.3.26", default-features = false }

[dev-dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
sqlx-db-tester = "0.1.1"
